--- a/index.html
+++ b/index.html
@@ -24,38 +24,69 @@
 		  }
 		}
 
+
+		/* All from factors */
+
+		/* Main body and headings */
+
 		  body {
-		    padding-top: 20px;
-		    padding-bottom: 40px;
+		    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 		  }
-		  .container {
-		    width: 960px;
-		  }
-		  p.lead {
-		    padding-top: 15px;
-		  }
-		  .navigation, .pitch, .section1, .section2, .faq, .footer {
-		    padding: 10px 0px 10px 0px;
-		  }
-		  .video, .thermometer, .order, .social {
-		    border: 1px dotted;
+		  .heading, .subheading {
+		    font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
 		    text-align: center;
 		  }
-		  .video {
-		    /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-		    height: 124px;
-		    line-height: 124px;
+		  p.lead {
+		    padding-top: 1.5%;
+		    font-size: 24px;
+		    line-height: 30px;
 		  }
-		  .thermometer, .order, .social {
-		    /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-		    height: 40px;
-		    line-height: 40 px;
+		  p {
+		    font-size: 18px;
+		    line-height: 24px;
 		  }
-		  div.row {
-		    border: 1px solid;
+
+		  /* Video pitch and Action */
+		  .pitch {
+		    padding: 2.5% 0%;
 		  }
+		  .order {
+		    padding: 2% 0%;
+		  }
+
+		  .actions {
+		    backgroud-color: #343434;
+		    padding: 3% 0%;
+		  }
+		  .video, .thermometer, .order, .social, .statistics {
+		    text-align: center;
+		  }
+		  .statistics h3, .statistics p{
+		    color: white;
+		  }
+
+		  /* Marketing Copy and Footer */
+		  .copy {
+		    padding-top: 2.5%;
+		    padding-botton: 2.5%;
+		    text-align: justify;
+		  }
+		  .asset {
+		    padding: 2.5% 0%;
+		  }
+		  .footer {
+		    color: #cccccc;
+		    text-align: center;
+		  }
+		  .footer p {
+		    font-size: 11px;
+		  }
+		  .footer a {
+		    color: #ccccff;
+		  }
+
 		</style>
-	</head>
+	  <head>
 	<body>
 
 	<!-- Mobile-friendly navbar adapted from example. -->
@@ -81,67 +112,31 @@
 	</div>
 
 
-
-
-
+	<!-- We use row-fluid inside containers to achive a resizable layout. --> 
+	<!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
+	<!-- http://stackoverflow.com/a/12270322 -->
 	  <div class="container">
-	    <div class="row navigation">
-	      <div class="span2 logo">
-		Logo
-	      </div>
-	    <div class="span6 blank">
-		Blank
-	    </div>
-	    <div class="span4 about">
-		About
-	    </div>
-	  </div>
-	  <div class="row heading">
-	    <div class="span12">
-	      <h1>Bitstarter Title</h1>
-	    </div>
-	  </div>
-	  <div class="row subheading">
-	    <div class="span12">
-	      <p class="lead">This is my first bitstarter project.</p>
-	    </div>
-	  </div>
-	  <div class="row pitch">
-	    <div class="span6 video">
-	      Video
-	    </div>
-	    <div class="span6">
-	      <div class="thermometer">
-	        Thermometer
-	      </div>
-	      <div class="order">
-		Order
-	      </div>
-	      <div class="social">
-		Social
+	    <!-- Font and paired font of .heading/.subheading and body from Google fonts -->
+	    <!-- www.google.com/fonts/specimen/Ubuntu -->
+	    <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
+	    <div class="row-fluid heading">
+	      <div class="span12">
+		<h1>Product</h1>
 	      </div>
 	    </div>
-	  </div>
-	  <div class="row section1">
-	    <div class="span12">
-	      Marketing Section 1
+	    <div class="row-fluid subheading">
+	      <div class="span12">
+	        <!-- Special typography from Bootstrap for lead paragraph. -->
+		<!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
+		<p class="lead">One sentence description.</p>
+	      </div>
 	    </div>
+	    <div class="row-fluid pitch">
+	      <div class="span5 offset1 video">
+		<img class="img-polaroid" src="http://placehold.it/400x300">
+	      </div>
+
 	  </div>
-	  <div class="row section2">
-	    <div class="span12">
-	      Marketing Section 2
-	    </div>
-	  </div>
-	  <div class="row faq">
-	    <div class="span12">
-	      FAQ
-	    </div>
-	  </div>
-	  <div class="row footer">
-	    <div class="span12">
-	      Footer
-	    </div>
-	  </div>
-	</div>
+	
 	</body>
 </html>
