--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
 		<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
 		<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-		<link href=`http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,600,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,600,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
 		      rel="stylesheet" type="text/css">
 		<style type="text/css">
@@ -41,7 +41,7 @@
 		  }
 		}
 
-		/* All from factors */
+		/* All form factors */
 
 		/* Main body and headings */
 
@@ -102,7 +102,7 @@
 		  }
 
 		</style>
-	  <head>
+	  </head>
 	<body>
 
 	<!-- Mobile-friendly navbar adapted from example. -->
@@ -110,7 +110,7 @@
 	<div class="navbar navbar-inverse navbar-fixed-top">
 	  <div class="navbar-inner">
 	    <div class="container">
-	      <button type="button" class="btn btn-navbar" data-toaale="collapse" data-taraet=".nav-collapse">
+	      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
