--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 		    <!-- Social buttons are not included in default Bootstrap. -->
 			<!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
 			<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-			<button class="btn btn-facebook"><i class="icon-facebook"</i> | Facebook</button>
+			<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 		  </div>
 		</div>
 	  </div>
@@ -253,7 +253,7 @@
 		  <div class="accordion" id="accordion2">
 		    <div class="accordion-group">
 			  <div class="accordion-heading">
-			    <a class="accordion-toggle" data-toogle="collapse" data-parent="#accodion2" href="#collapseOne">
+			    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
 				What does FAQ stand for?
 				</a>
 			  </div>
